@@ -2,6 +2,7 @@ import static org.gradle.api.JavaVersion.VERSION_11
 import static org.gradle.jvm.toolchain.JavaLanguageVersion.of
 import static org.jetbrains.kotlin.gradle.dsl.JvmTarget.JVM_11
 import static org.jetbrains.kotlin.gradle.dsl.KotlinVersion.KOTLIN_1_8
+import org.jetbrains.dokka.gradle.DokkaTask
 
 buildscript {
     configurations.classpath {
@@ -89,6 +90,7 @@ allprojects {
 
         doFirst {
             systemProperty 'java.io.tmpdir', buildDir.absolutePath
+            jvmArgs '--illegal-access=deny'
         }
     }
 
@@ -104,6 +106,9 @@ allprojects {
         pluginManager.withPlugin('corda.javadoc-generation') {
             artifacts {
                 archives javadocJar
+            }
+            tasks.withType(DokkaTask.class).configureEach {
+                moduleVersion.set(System.getenv("RELEASE_VERSION") ?: "$cordaProductVersion.$cordaRuntimeRevision")
             }
         }
     }
@@ -355,7 +360,7 @@ subprojects {
     normalization {
         runtimeClasspath {
             metaInf {
-                ignoreAttribute("Bnd-LastModified")
+                ignoreCompletely()
             }
         }
     }
@@ -413,7 +418,7 @@ subprojects {
     configurations.configureEach {
         resolutionStrategy {
             // FORCE Gradle to use latest dynamic versions.
-             cacheDynamicVersionsFor 0, 'seconds'
+            cacheDynamicVersionsFor 0, 'seconds'
 
             // FORCE Gradle to use latest SNAPSHOT versions.
             cacheChangingModulesFor 0, 'seconds'
